--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,13 +30,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
+          cache: 'yarn'
+      
+      - name: Enable Corepack
+        run: corepack enable
       
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --immutable || yarn install
       
       - name: Build
-        run: npm run build
+        run: yarn build
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
